testsuite/tests/th/T16895d.stderr

T16895d.hs:7:15: error: [GHC-99831]
    • Non-variable expression is not allowed in an infix expression
      When splicing a TH expression:
        1 `GHC.Base.FunOps.id GHC.Base.FunOps.id` 2
    • In the untyped splice:
        $(infixE (Just [| 1 |]) [| (id id) |] (Just [| 2 |]))
